...
    let createdAt: Date
}

/// Represents the categories for the EventCategoryTabView.
enum EventCategory: String, CaseIterable {
    case forYou = "For You"
    case ongoing = "Ongoing"
    case startingSoon = "Starting Soon"
}

/// Represents an entry for an event join.
struct EventJoins: Codable, Identifiable {
    /// Unique identifier for an event join.
...
